@@ -3,20 +3,17 @@ package no.nav.dolly.bestilling.arenaforvalter.command;
 import lombok.RequiredArgsConstructor;
 import no.nav.dolly.domain.resultset.arenaforvalter.ArenaNyeBrukere;
 import no.nav.dolly.domain.resultset.arenaforvalter.ArenaNyeBrukereResponse;
-import no.nav.testnav.libs.reactivecore.utils.WebClientFilter;
+import no.nav.testnav.libs.reactivecore.web.WebClientError;
+import no.nav.testnav.libs.reactivecore.web.WebClientFilter;
 import no.nav.testnav.libs.securitycore.config.UserConstant;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Flux;
-import reactor.util.retry.Retry;
 
-import java.time.Duration;
 import java.util.concurrent.Callable;
 
-import static no.nav.dolly.domain.CommonKeysAndUtils.CONSUMER;
-import static no.nav.dolly.domain.CommonKeysAndUtils.HEADER_NAV_CALL_ID;
-import static no.nav.dolly.domain.CommonKeysAndUtils.HEADER_NAV_CONSUMER_ID;
+import static no.nav.dolly.domain.CommonKeysAndUtils.*;
 import static no.nav.dolly.util.CallIdUtil.generateCallId;
 import static no.nav.dolly.util.TokenXUtil.getUserJwt;
 
@@ -31,8 +28,9 @@ public class ArenaforvalterPostArenaBruker implements Callable<Flux<ArenaNyeBruk
 
     @Override
     public Flux<ArenaNyeBrukereResponse> call() {
-
-        return webClient.post().uri(
+        return webClient
+                .post()
+                .uri(
                         uriBuilder -> uriBuilder
                                 .path(ARENAFORVALTER_BRUKER)
                                 .build())
@@ -45,7 +43,7 @@ public class ArenaforvalterPostArenaBruker implements Callable<Flux<ArenaNyeBruk
                 .bodyToFlux(ArenaNyeBrukereResponse.class)
                 .map(response -> {
                     response.setStatus(HttpStatus.OK);
-                    response.setMiljoe(arenaNyeBrukere.getNyeBrukere().get(0).getMiljoe());
+                    response.setMiljoe(arenaNyeBrukere.getNyeBrukere().getFirst().getMiljoe());
                     return response;
                 })
                 .doOnError(WebClientFilter::logErrorMessage)
@@ -53,9 +51,9 @@ public class ArenaforvalterPostArenaBruker implements Callable<Flux<ArenaNyeBruk
                         Flux.just(ArenaNyeBrukereResponse.builder()
                                 .status(WebClientFilter.getStatus(error))
                                 .feilmelding(WebClientFilter.getMessage(error))
-                                .miljoe(arenaNyeBrukere.getNyeBrukere().get(0).getMiljoe())
+                                .miljoe(arenaNyeBrukere.getNyeBrukere().getFirst().getMiljoe())
                                 .build()))
-                .retryWhen(Retry.backoff(3, Duration.ofSeconds(5))
-                        .filter(WebClientFilter::is5xxException));
+                .retryWhen(WebClientError.is5xxException());
     }
+
 }
